Finished logic for handing off next rounds to next decider, several major fixes, added Coins handler lib.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -77,6 +77,7 @@
 		'game:player_done',
 		'game:survey',
 		'game:advance',
+		'game:decider'
 	
 	];
 
@@ -475,9 +476,9 @@ window.onload = function() {
 			function templateLoad() {
 
 				var selected = $('#template_selector');
-				// var template = selected.val();
 
-		    socket.emit('game:load_screen', emitData({ index: selected.prop('selectedIndex') }));
+				if(selected.prop('selectedIndex') > 0)
+			    socket.emit('game:load_screen', emitData({ index: selected.prop('selectedIndex') }));
 
 			}
 			$("#template_reload").click(function() {
