WIP coin logic.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -80,6 +80,11 @@
                     <!-- BODY CONTENT START -->
                     {{{body}}}
 
+                    <section id="bottom-bar">
+                        <div id="player-coins">[coins] <span></span></div>
+                        <div id="pot-coins">[pot] <span></span></div>
+                    </section>
+
                     {{#ifeq debug true}}
                         {{#ifnoteq viewType 'decider'}}
                           <div id="emulate-players" style="display:none">
