Finished basic logic for queuing/pushing add time requests during deliberation stage.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -72,6 +72,7 @@
 		'game:countdown',
 		'game:countdown_ending',
 		'game:countdown_end',
+		'game:countdown_player',
 		'game:phase_over',
 		'game:round_over',
 		'game:player_done',
