Resolved numerous issues with time purchase queueing, added sub-classed Reset and StopCountdown methods, unified timer callback, template fixes.

--- a/templates/partials/decider/pitch.hbs
+++ b/templates/partials/decider/pitch.hbs
@@ -2,7 +2,10 @@
   <div class="row room-container">
 		<h4><em>{{question}}</em></h4>
 
-		Press 'deliberate' to start the timer. Be sure to ask probing questions about the proposal and encourage questions among players.
+		"Now everyone will take turns pitching their proposal." 
+
+		<p>
+		Press 'start' to start the timer.
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
