--- a/templates/partials/decider/deliberate.hbs
+++ b/templates/partials/decider/deliberate.hbs
@@ -6,7 +6,7 @@
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
-    <input id="btn-time" data-event="game:start_timer" class="post-button submit" type="submit" name="submit" value="start ({{config.pitchSeconds}} seconds)">
+    <input id="btn-time" data-event="game:start_timer" class="post-button submit" type="submit" name="submit" value="deliberate ({{config.pitchSeconds}} seconds)">
     <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next" style="display:none">
     Time left: <span id="countdown"></span>
 	</div>
