--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -85,6 +85,8 @@ socketEvents = function(eventId, eventData) {
                 startAnim.from($('#btn-start-game'), 1, {scale:0, autoAlpha: 0, ease:Elastic.easeOut})
             } --}}
 
+            $('#players').empty();
+
             _.each(currentPlayers, function(name, index) {
 
                 var nameFormatted = (name.length <= 15) ? name : name.substring(0, 15) + "...";
@@ -181,7 +183,8 @@ socketEvents = function(eventId, eventData) {
 
         case 'game:countdown_end':
 
-            {{!-- if(eventData === 'deliberateCountdown') --}}
+            $('#added-time').hide();
+
             $('#btn-next').fadeIn();
             
             $('#more-time').fadeIn();
