Added method to disperse amount in pot to round winner and restore pot balance on round change, improved basic UI for pitch stage, a few other small fixes.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -493,6 +493,7 @@ window.onload = function() {
 			$("#template_selector").change(function() {
 
 				templateLoad();
+				screensAnim.stop();
 			
 			});
 			$("#countdowns_pause").click(function(evt) {
