--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -207,7 +207,7 @@ socketEvents = function(eventId, eventData) {
 
         case 'game:phase_over':
             
-            $('#btn-next').fadeIn();
+            $('#btn-next-stage').fadeIn();
 
             break;
 
