--- a/templates/partials/decider/pitch.hbs
+++ b/templates/partials/decider/pitch.hbs
@@ -5,13 +5,21 @@
 		"Now everyone will take turns pitching their proposal." 
 
 		<p>
+		{{#if firstPlayer}}
+			The first player to pitch is  
+		{{else}}
+			The next player to pitch is  
+		{{/if}}
+		<em>{{activePlayer.username}}</em> 
+
+		<p>
 		Press 'start' to start the timer.
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
     <input id="btn-time" data-event="game:start_timer" class="post-button submit" type="submit" name="submit" value="start ({{config.pitchSeconds}} seconds)">
     <input id="btn-next-player" data-event="game:next_player" class="post-button submit" type="submit" name="submit" value="next player" style="display:none">
-    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next" style="display:none">
+    <input id="btn-next-stage" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next" style="display:none">
     Time left: <span id="countdown"></span>
 	</div>
 </section>
