--- a/public/styles/_core/variables.scss
+++ b/public/styles/_core/variables.scss
@@ -2,3 +2,5 @@ $background-main: url(https://res.cloudinary.com/engagement-lab-home/image/uploa
 
 $primary-color: #333;
 $logo-color: #00c5c2;
+
+$color-turquoise: #1EB4BB;
