--- a/templates/partials/script/decider_logic.hbs
+++ b/templates/partials/script/decider_logic.hbs
@@ -49,13 +49,13 @@
       );
 
       // If screen too small, show error saying so
-      if($(window).outerWidth() < 1024)
+{{!--       if($(window).outerWidth() < 1024)
           showErrorModal(true, 'size');
       else {
           showErrorModal(false, 'size');
           // Apply zoom
           $('body').css('zoom', scale);
-      }
+      } --}}
 
 
   }
