--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,7 +1,9 @@
 <div id="login" class="col-sm-12">
 
-  <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png" height='auto' width='200px'>
-  <p style="width:20%; margin-left:40%; color: white;">Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
+  <div class="login-header">
+    <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+    <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
+  </div>
 
   <div class="form">
     <input type="text" id="access_code" placeholder="room code"> <br />
@@ -19,8 +21,7 @@
 
   <div class="col-sm-3"></div>
   <div class="row col-sm-9" id="players">
-
-
+  
 
   </div>
   <div class="col-sm-3"></div>
