--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -1,5 +1,5 @@
 <section class="col-lg-12 col-sm-12 col-centered" style="overflow:hidden">
-  <div class="row room-container">
+  <div class="row room-container" id="rules">
 		
 		<div class="row screen col-lg-6 col-sm-12">
 		  As the Decider, {{decider}} begins with {{config.deciderStartCoinCount}} coins.
