--- a/templates/views/decider/game.hbs
+++ b/templates/views/decider/game.hbs
@@ -4,7 +4,7 @@
   <p style="width:20%; margin-left:40%;">Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
 
   <div class="col-sm-3"></div>
-  <div class="submission col-sm-6 input-box">
+  <div class="submission col-sm-6">
       <div class="form">
           <div class="form-prompt white">enter username:</div>
           <input type="text" id="player-name" placeholder="name"> <br/>
