--- a/templates/views/decider/index.hbs
+++ b/templates/views/decider/index.hbs
@@ -3,8 +3,10 @@
         <div class="col-sm-12">
 
             <div class="col-sm-3"></div>
-            <div class="submission col-sm-6 input-box">
+            <div class="submission col-sm-6">
                 <div class="form">
+                    <div class="form-prompt white">access code:</div>
+                    <div id="access-code">{{gameCode}}</div>
                     <div class="form-prompt white">enter username:</div>
                     <input type="text" id="player-name" placeholder="name"> <br />
 
@@ -14,11 +16,10 @@
                             <button value="{{id}}" class="toggle-button inactive">{{name}}</button>
                         {{/each}} 
                     </div> 
-                    <div class="form-prompt white">access code:</div>
-                    <div id="access-code">{{gameCode}}</div>
+                    
 
                     <div class="error">Error!</div>
-                    <input id="btn_submit" data-type="{{gameType}}" class="button_text" type="submit" name="submit" value="Start!">       
+                    <input id="btn_submit" data-type="{{gameType}}" class="button_text" type="submit" name="submit" value="Start!">
                 </div>
             </div>
 
@@ -37,7 +38,7 @@
         </div>
         <div class="col-sm-3"></div>
 
-        <div class="form row {{!-- hidden-el --}}" id="start">
+        <div class="form row" id="start">
         <input id="btn-start-game" data-event="game:start" class="post-button submit" type="submit" name="submit" value="start">
         </div>
     </div>
