Resolved several issues with Coins class dispersal methods. Overrode Core member group_id to be same as players_id since decider is just another player (decider-only events filtered by client). Numerous fixes/updates to AgendaItemAction including telling player action state and dispersing coins. Added 'player:agenda_item' event containing decision info along w/ ability to delay next screen from showing.

--- a/templates/partials/player/agenda_item.hbs
+++ b/templates/partials/player/agenda_item.hbs
@@ -25,10 +25,12 @@
 
 		{{/if}}
 		
-		<div id="chosen">
+		<div id="chosen" class="hidden-el">
+			The decider accepted your agenda item (+{coins})
 		</div>
 		
-		<div id="not-chosen">
+		<div id="not-chosen" class="hidden-el">
+		The decider did not accept your agenda item
 		</div>
 
 	</div>
