--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -75,7 +75,11 @@
 
 }
 
-
+// BOTTOM BAR (COINS, NEXT)
+#bottom-bar {
+	background-color: $color-seafoam;
+	font-size: large;
+}
 
 .ended-container {
 	background-color: white;
@@ -94,7 +98,7 @@
 	margin: 10px auto;
 	background-color: white;
 	color: black;
-  min-height: 500px;
+  min-height: 250px;
 
 	h1 {
 		font-size: 6em;
@@ -117,7 +121,6 @@
 }
 
 // GAME
-
 .player-bio {
 	height: 100%;
 	display: table;
@@ -133,7 +136,8 @@
 	height: 100%;
 	display: table;
 	.screen {
-		display: table-cell;
+		// These are hidden by default
+		display: none;
 		vertical-align: middle;
 	}
 }
