--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,30 +1,71 @@
-<div id="login" class="col-sm-12">
+<div class="login-header">
+  <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+  <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
+</div>
 
-  <div class="login-header">
-    <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
-    <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
-  </div>
+<div id="login" class="col-sm-12">
 
   <div class="form">
     <input type="text" id="access_code" placeholder="room code"> <br />
     <input type="text" id="player_name" placeholder="name"> <br />
     <div class="error">Error!</div>
     <input id="btn_submit_code" data-event="game:entry" data-package='{"code": "#access_code", "name": "#player_name"}' class="btn btn-default game_login" type="submit" name="submit" value="play">
+    <input id="btn_new_game" class="btn btn-default" type="submit" name="submit" value="new game">_
+  </div>
+
+  <div class="row waiting" style="display:none">
+    <h1 id="game-code">{{game.accessCode}}</h1>
+    <h3>Waiting for players</h3>
+
+
+    <div class="col-sm-3"></div>
+    <div class="row col-sm-9" id="players">
+    
+
+    </div>
+    <div class="col-sm-3"></div>
   </div>
 
 </div>
 
-<div class="row" id="waiting" style="display:none">
-  <h1 id="game-code">{{game.accessCode}}</h1>
-  <h3>Waiting for players</h3>
+<div id="decider" style="display:none">
 
+  <div class="submission col-sm-6">
+      <div class="form create">
 
-  <div class="col-sm-3"></div>
-  <div class="row col-sm-9" id="players">
-  
+        <div class="form-prompt white">access code:</div>
+        <div class="access-code"></div>
+        <div class="form-prompt white">enter username:</div>
+        <input type="text" id="player-name" placeholder="name"> <br />
 
+        <div class="form-prompt white">select the deck to use:</div>
+        <div id="decks">
+        </div> 
+        
+
+        <div class="error">Error!</div>
+        <input id="btn_submit" class="button_text" type="submit" name="submit" value="Start!">
+
+      </div>
   </div>
-  <div class="col-sm-3"></div>
+
+  <div class="row waiting" style="display:none">
+    <h1 class="access-code"></h1>
+    <h2>You are the decider</h2>
+    <h3>Waiting for players</h3>
+
+
+    <div class="col-sm-3"></div>
+    <div class="row col-sm-9" id="players">
+
+    </div>
+    <div class="col-sm-3"></div>
+
+    <div class="form row {{!-- hidden-el --}}" id="start">
+      <input id="btn-start-game" data-event="game:start" class="post-button submit" type="submit" name="submit" value="start">
+    </div>
+  </div>
+
 </div>
 
 {{!-- 
