quick fix for rules animations

--- a/public/styles/_core/forms.scss
+++ b/public/styles/_core/forms.scss
@@ -36,6 +36,8 @@
 	    font-size: x-large;
 	    margin-bottom: 20px;
 	    position: relative;
+	    max-width: 100%;
+	    color: black;
 
 
 	  &:focus {
