--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -77,6 +77,10 @@
 
                   <div class="container-fluid" id="gameContent">
 
+                  <section id="logo-bar" style="display:none">
+                    <img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png">
+                </section>
+
                     <!-- BODY CONTENT START -->
                     {{{body}}}
 
