Moved decider controls to base layout from multiple partials, other fixes.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -147,7 +147,7 @@ section#bottom-bar {
 }
 
 // HIDE ANY DECIDER-ONLY VIEWS BY DEFAULT
-#decider {
+#decider, #decider-controls {
 		display: none;
 }
 
