--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -288,8 +288,8 @@
 	    $('#login').remove();
 	    $('.access-code').text(gameCode);
 	    $('#decider .create').hide();
-      $('#decider').fadeIn();
-      $('#decider .waiting').show();
+      $('#decider').show();
+      $('#decider .waiting, #decider-debugging').show();
 		}
 
     // Create uid for player
