--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -138,7 +138,7 @@ socketEvents = function(eventId, eventData) {
                 rulesAnim();
 
                 if(isDecider)
-                    $('#decider').show();
+                    $('#decider-controls').show();
 
                 console.log(eventData + " is the event data");
 
