--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -252,7 +252,7 @@ section#bottom-bar {
 .role, .agenda_item {
   display: none; }
 
-#decider {
+#decider, #decider-controls {
   display: none; }
 
 .screen {
