--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -44,35 +44,33 @@
             </div>
 
             {{#ifeq debug true}}
-              {{#ifeq viewType 'decider'}}
-                <div id="error-box">
-                </div>
-                
                 {{!-- DEBUGGING --}}
                 <div id="debugging" class="form" style="position: fixed;top: 0;">
                     
                     <div id="debug-info">
                     </div>
 
-                      <br /><button id="countdowns_pause" data-resume="false" class="submit">pause countdowns</button>
-                      <br /><button id="goto_results" data-event="game:force_results" class="submit"{{!--  style="display:none" --}}>show results</button>
+                    <div id="decider-debugging">
 
-                    <div id="slider-gsap">
+                        <br /><button id="countdowns_pause" data-resume="false" class="submit">pause countdowns</button>
+                        <br /><button id="goto_results" data-event="game:force_results" class="submit"{{!--  style="display:none" --}}>show results</button>
+
+                        <div id="slider-gsap">
+                        </div>
+
+                        <select id="template_selector" name="template_selector_player">
+                          <option value="">choose:</option>
+
+                                {{#each gameScreens}}
+                                  <option value="{{this}}">{{this}}</option>
+                                {{/each}}
+                        </select>
+
                     </div>
 
-                    <select id="template_selector" name="template_selector_player">
-                      <option value="">choose:</option>
-
-                            {{#each gameScreens}}
-                              <option value="{{this}}">{{this}}</option>
-                            {{/each}}
-                    </select>
-                </div>
-              {{else}}
-                <div id="debugging" class="form" style="position: fixed;top: 0;">
                   <button id="generate_players">generate players</button>
                 </div>
-              {{/ifeq}}
+
             {{/ifeq}}
 
                   <div class="container-fluid" id="gameContent">
@@ -86,9 +84,14 @@
 
                   </div>
 
-                <section id="bottom-bar">
-                    <div id="player-coins">[coins] <span></span></div>
-                    <div id="pot-coins">[pot] <span></span></div>
+                <section id="bottom-bar" class="row">
+                    <div id="currency" class="col-sm-6">
+                        <div id="player-coins">[coins] <span></span></div>
+                        <div id="pot-coins">[pot] <span></span></div>
+                    </div>
+                    <div class="form next col-sm-6" id="decider-controls">
+                        <input id="btn-next" data-keep_enabled="true" data-event="game:next" class="submit" type="submit" name="submit" value="next">
+                    </div>
                 </section>
 
                 {{#ifeq debug true}}
