Added Coins class methods for getting amount in amount, getting coin count for a player, added way to track players’ starting coins from start of round; resolved RestorePot() bugs. Resolved issue w/ repeating timer when players bought time. Updated data obtained for winner and scoreboard screens. A wide array of other layout fixes.

--- a/public/styles/_core/playerview.scss
+++ b/public/styles/_core/playerview.scss
@@ -135,7 +135,7 @@ section#bottom-bar {
 	margin: 10px auto;
 	background-color: white;
 	color: black;
-  min-height: 250px;
+  // min-height: 250px;
 
 	h1 {
 		font-size: 6em;
