--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -89,7 +89,7 @@
                         <div id="player-coins">[coins] <span></span></div>
                         <div id="pot-coins">[pot] <span></span></div>
                     </div>
-                    <div class="form next col-sm-6" id="decider-controls">
+                    <div class="form next decider col-sm-6" id="decider-controls">
                         <input id="btn-next" data-keep_enabled="true" data-event="game:next" class="submit" type="submit" name="submit" value="next">
                     </div>
                 </section>
