--- a/templates/partials/shared/roles.hbs
+++ b/templates/partials/shared/roles.hbs
@@ -3,9 +3,9 @@
 {{#each this}}
 
 	{{#if decider}}
-		<div class="row"><b>Decider:</b> {{name}}</div>
+		<div class="row"><b>Decider:</b> {{username}}</div>
 	{{else}}
-		<div class="row"><b>{{title}}:</b> {{name}}</div>
+		<div class="row"><b>{{title}}:</b> {{username}}</div>
 	{{/if}}
 
 {{/each}}
