--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -5,7 +5,7 @@
   <p>Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
 </div>
 
-  <div class="form">
+  <div class="form login">
     <input type="text" id="access_code" placeholder="room code"> <br />
     <input type="text" id="player_name" placeholder="name"> <br />
     <div class="error">Error!</div>
