--- a/templates/partials/decider/think.hbs
+++ b/templates/partials/decider/think.hbs
@@ -6,7 +6,7 @@
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
-    <input id="btn-time" data-event="game:start_timer" class="post-button submit" type="submit" name="submit" value="think ({{config.thinkSeconds}} seconds)">
-    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next" style="display:none">
+    <input id="btn-time" data-event="game:start_timer" class="submit" type="submit" name="submit" value="think ({{config.thinkSeconds}} seconds)">
+    <input id="btn-next" data-event="game:next" class="submit" type="submit" name="submit" value="next" style="display:none">
 	</div>
 </section>
