--- a/templates/partials/shared/winner.hbs
+++ b/templates/partials/shared/winner.hbs
@@ -3,10 +3,4 @@
 [[Icon here]]
 {{name}}!
 
-<p>+?? coins</p>
-
-{{!-- {{#if decider}} --}}
-	<div class="form row" id="decider">
-    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
-	</div>
-{{!-- {{/if}} --}}
+<p>+{{coins}} coins</p>
